--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "homepage": "https://github.com/tezon22/NUESA1.10#readme",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.9.1",
     "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
